--- a/index.html
+++ b/index.html
@@ -3,73 +3,95 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Bootstrap Components</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <title>Latitude Landing Page</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Latitude Project Site</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Landing Page <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Visualizations
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/Visualizations/vis1.html" target="_blank">Temperature
+              Visualization</a>
+            <a class="dropdown-item" href="/Visualizations/vis2.html" target="_blank">Humidity
+              Visualizations</a>
+            <a class="dropdown-item" href="/Visualizations/vis3.html" target="_blank">Cloudiness
+              Visualization</a>
+            <a class="dropdown-item" href="/Visualizations/vis4.html" target="_blank">Wind Speed
+              Visualization</a>
           </div>
-        </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <h1>Summary: Latitude vs. X</h1>
-            </div>
-            <div class="col-md-4">
-                <h2>Visualizations</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-2">
-                <img src="/Assets/Images/Fig1.png">
-            </div>
-            <div class="col-md-6">
-                <p>
-                    The purpose of this project is to examine the change in weather across a variety of locations using their relative difference is distance from the equator as a reference. Using Openweather API we were able to examine over 500 cities and their weather conditions at that moment.
-                </p>
-                <p>
-                    After this information was collected it needed to be processed which required information to cleaned and then displayed using matplotlib's graphing functions. The variables examined against the latitude were the cloudiness, temperature, wind speed and humidty. This site will be used to display and convey our findings on this information.
-                </p>
-            </div>
-            <div class="col-md-2">
-                <a href='https://www.google.com'><img src ='Assets/Images/Fig1.png' width="250" height="250"></a>
-            </div>
-            <div class="col-md-2">
-                <a href="https://www.google.com"><img src='Assets/Images/Fig2.png' width="250" height="250"></a>
-            </div>
-        </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Visualizations/comparisons.html" target="_blank">Comparisons</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/data.html" target="_blank">Data</a>
+        </li>
+      </ul>
     </div>
+  </nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <h1>Summary: Latitude vs. X</h1>
+      </div>
+      <div class="col-md-4">
+        <h2>Visualizations</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-8">
+        <div class="pull-left"><img src="/Assets/Images/Fig1.png"></div>
+        <div class="pull-left">
+          <p>The purpose of this project is to examine the change in weather across a variety of locations using their
+            relative difference is distance from the equator as a reference. Using Openweather API we were able to
+            examine over 500 cities and their weather conditions at that moment.</p>
+        </div>
+        <div class="pull-left">
+          <p>After this information was collected it needed to be processed which required information to cleaned and
+            then displayed using matplotlib's graphing functions. The variables examined against the latitude were the
+            cloudiness, temperature, wind speed and humidty. This site will be used to display and convey our findings
+            on this information.</p>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <a href='/Visualizations/vis1.html' target="_blank"><img src='Assets/Images/Fig1.png' width="200" height="200"
+            class="image-thumbnail"></a>
+        <a href='/Visualizations/vis3.html' target="_blank"><img src='Assets/Images/Fig3.png' width="200" height="200"
+            class="image-thumbnail"></a>
+      </div>
+      <div class="col-md-2">
+        <a href="/Visualizations/vis2.html" target="_blank"><img src='Assets/Images/Fig2.png' width="200" height="200"
+            class="image-thumbnail"></a>
+        <a href="/Visualizations/vis4.html" target="_blank"><img src='Assets/Images/Fig4.png' width="200" height="200"
+            class="image-thumbnail"></a>
+      </div>
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
